<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treasure Hunt</string>
    <string name="register_header">Register</string>
    <string name="login_header">Register</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hunt_name_label">Hunt name:</string>
    <string name="save">Save Details</string>
    <string name="title_activity_generate_hunt">GenerateHuntActivity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="radio_button_staff">Staff</string>
    <string name="radio_button_student">Student</string>
    <string name="register_user_type">User Type</string>
    <string name="title_activity_scan_barcode">ScanBarcodeActivity</string>
    <string name="scan_qr_code">Scan</string>
    <string name="scan_qr_code_header">Scan A QR Code</string>
    <string name="logging_in_spinner_info">Attempting to log you in...</string>
    <string name="error_email_null">Please enter an email address</string>
    <string name="error_password_null">Please enter your password</string>
    <string name="error_email_too_short">Should be more than 10 characters</string>
    <string name="error_password_too_short">Should be more than 6 characters</string>
    <string name="error_name_null">Please enter your name</string>
    <string name="error_name_too_short">Should be more than 4 characters</string>
    <string name="error_email_incorrect_format">Should be valid email format</string>
    <string name="choose_hunt_header">Choose A Hunt</string>
    <string name="choose_hunt">Choose Hunt</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="title_activity_register_with_hunt">RegisterWithHuntActivity</string>
    <string name="register_hunt_label">Register</string>
    <string name="shared_preferences">MySharedPreferencesFile</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="my_hunts_label">My hunts</string>
    <string name="browse_hunts_label">Browse Hunts</string>
    <string name="title_activity_my_hunts">MyHuntsActivity</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="leaderboard_header">Leaderboard</string>
    <string name="my_stats_header">My stats</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="started">Started:</string>
    <string name="latitude">Latitude:</string>
    <string name="longtitude">Longtitude:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="altitude">Altitude:</string>

    <color name="light_brown">#FFBDA78A</color>

    <string name="title_activity_map_list">MapListActivity</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>

</resources>
