<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/new_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_label"
        android:layout_below="@+id/register_label"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_user_email"
        android:layout_below="@+id/new_user_email"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_user_name"
        android:layout_below="@+id/new_user_name"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/save" />

</RelativeLayout>