<!-- Auto Generated when adding Login Activity, although altered to suit my needs -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:id="@+id/login_form_layout" >
    
    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_password"
            android:layout_below="@+id/login_password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="34dp"
            android:text="@string/login" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_email_address"
            android:layout_below="@+id/login_email_address"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@+id/register_on_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/sign_in_button"
            android:layout_alignBottom="@+id/sign_in_button"
            android:layout_marginLeft="42dp"
            android:layout_toRightOf="@+id/sign_in_button"
            android:text="@string/register" />

        <EditText
            android:id="@+id/login_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_label"
            android:layout_below="@+id/login_label"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true">
            
             <requestFocus />
            </EditText>

</RelativeLayout>